%% ERD NutriSmart Agent — sinh từ backend/app/models.py (nguồn sự thật của DB)
%% 28 bảng / 6 miền nghiệp vụ: Người dùng · Tri thức (RAG) & Cào tin · Theo dõi · Lộ trình & Checkin · Chat · Thông báo
%% Xem trước: https://mermaid.live (dán nguyên nội dung file này)
erDiagram

    %% ---------- 1. NGƯỜI DÙNG & HỒ SƠ SỨC KHỎE ----------
    USERS {
        uuid        id             PK
        string      email          UK
        string      password_hash
        enum        role
        timestamptz created_at
        timestamptz updated_at
    }
    USER_PROFILE {
        uuid        user_id              PK_FK
        string      full_name
        enum        gender
        date        birth_date
        smallint    activity_level_id   FK
        enum        goal
        int         daily_calorie_target
        jsonb       custom_conditions
        jsonb       custom_allergens
        timestamptz created_at
        timestamptz updated_at
    }
    ACTIVITY_LEVELS {
        smallint id                  PK
        string   name                UK
        string   description
        numeric  calorie_multiplier
    }
    STAFF_PROFILES {
        uuid        user_id            PK_FK
        string      staff_code         UK
        string      full_name
        string      gender
        date        birth_date
        string      specialization
        string      qualification
        string      employment_status
        timestamptz created_at
        timestamptz updated_at
    }
    ROLE_PERMISSIONS {
        enum        role               PK
        boolean     can_manage_users
        boolean     can_manage_foods
        boolean     can_manage_categories
        boolean     can_review_documents
        boolean     can_review_plans
        boolean     can_review_ai_chat
        boolean     can_review_logs
        boolean     can_manage_permissions
        timestamptz created_at
        timestamptz updated_at
    }
    MEDICAL_CONDITIONS {
        int      id      PK
        string   name    UK
    }
    ALLERGENS {
        int      id    PK
        string   name  UK
    }
    USER_MEDICAL_CONDITIONS {
        uuid  user_id       PK_FK
        int   condition_id  PK_FK
    }
    USER_ALLERGENS {
        uuid      user_id      PK_FK
        int       allergen_id  PK_FK
    }
    BODY_METRICS_HISTORY {
        bigint   id           PK
        uuid     user_id      FK
        date     recorded_at
        numeric  height_cm
        numeric  weight_kg
    }

    USERS            ||--o| USER_PROFILE           : "has_info"
    ACTIVITY_LEVELS  ||--o{ USER_PROFILE           : "classifies"
    USERS            ||--o| STAFF_PROFILES      : "has_staff"
    ROLE_PERMISSIONS ||--o{ USERS               : "grants"
    USER_PROFILE        ||--o{ USER_MEDICAL_CONDITIONS  : "has"
    MEDICAL_CONDITIONS ||--o{ USER_MEDICAL_CONDITIONS: "listed_in"
    USER_PROFILE        ||--o{ USER_ALLERGENS   : "has"
    ALLERGENS        ||--o{ USER_ALLERGENS   : "listed_in"
    USERS            ||--o{ BODY_METRICS_HISTORY: "records"

    %% ---------- 2. TRI THỨC (RAG) & CÀO TIN TỰ ĐỘNG ----------
    DOC_CATEGORIES {
        int      id         PK
        int      parent_id  FK
        string   name
        string   slug       UK
    }
    DOCUMENTS {
        uuid        id           PK
        int         category_id  FK
        text        title
        text        source_url
        string      source_name
        string      language
        text        file_path
        text        raw_text
        enum        status
        uuid        uploaded_by  FK
        uuid        approved_by  FK
        timestamptz approved_at
        timestamptz created_at
        timestamptz deleted_at
    }
    DOC_CHUNKS {
        bigint   id           PK
        uuid     document_id  FK
        int      chunk_index
        text     content
        int      token_count
        vector   embedding
        jsonb    metadata
    }
    CRAWL_SOURCES {
        uuid        id          PK
        string      name
        string      source_key  UK
        string      domain
        jsonb       base_urls
        boolean     is_active
        timestamptz created_at
        timestamptz updated_at
    }

    DOC_CATEGORIES ||--o{ DOCUMENTS  : "groups"
    DOC_CATEGORIES ||--o{ DOC_CATEGORIES : "parent_of"
    DOCUMENTS      ||--o{ DOC_CHUNKS : "split_into"
    USERS          ||--o{ DOCUMENTS  : "uploads_doc"
    CRAWL_SOURCES  ||--o{ DOCUMENTS  : "scrapes_to"

    %% ---------- 3. THEO DÕI ĂN UỐNG & VẬN ĐỘNG ----------
    FOODS {
        uuid     id             PK
        string   name
        string   serving_desc
        numeric  serving_gram
        numeric  calories_kcal
        numeric  protein_g
        numeric  carb_g
        numeric  fat_g
        string   source
    }
    MEAL_IMAGES {
        uuid        id                 PK
        uuid        user_id            FK
        text        image_path
        enum        status
        uuid        predicted_food_id  FK
        numeric     confidence
        jsonb       raw_prediction
        numeric     estimated_kcal
        text        suitability_note
        timestamptz created_at
    }
    MEAL_LOGS {
        bigint      id             PK
        uuid        user_id        FK
        uuid        food_id        FK
        uuid        meal_image_id  FK
        enum        meal_type
        numeric     quantity
        numeric     calories_kcal
        timestamptz logged_at
        date        log_date
    }
    EXERCISES {
        int      id         PK
        string   name
        numeric  met_value
        string   category
    }
    ACTIVITY_LOGS {
        bigint      id               PK
        uuid        user_id          FK
        int         exercise_id      FK
        int         steps
        int         duration_min
        numeric     calories_burned
        timestamptz logged_at
    }

    USERS       ||--o{ MEAL_IMAGES   : "uploads"
    USERS       ||--o{ MEAL_LOGS     : "logs"
    USERS       ||--o{ ACTIVITY_LOGS : "performs"
    FOODS       ||--o{ MEAL_IMAGES   : "predicted_as"
    FOODS       ||--o{ MEAL_LOGS     : "consumed_as"
    MEAL_IMAGES ||--o{ MEAL_LOGS     : "source_of"
    EXERCISES   ||--o{ ACTIVITY_LOGS : "used_in"

    %% ---------- 4. LỘ TRÌNH, CHECKIN 14 NGÀY & ĐÁNH GIÁ ----------
    NUTRITION_PLANS {
        uuid        id                 PK
        uuid        user_id            FK
        int         version
        uuid        parent_plan_id     FK
        date        start_date
        date        end_date
        int         daily_kcal_target
        enum        goal
        jsonb       content
        enum        status
        timestamptz created_at
    }
    PLAN_EVALUATIONS {
        bigint      id                PK
        uuid        plan_id           FK
        date        period_start
        date        period_end
        numeric     avg_kcal_intake
        numeric     weight_change_kg
        enum        result
        text        ai_feedback
        timestamptz evaluated_at
    }
    PLAN_CHECKIN_SERIES {
        uuid        id          PK
        uuid        user_id     FK
        enum        goal
        string      status
        date        started_at
        date        closed_at
        timestamptz created_at
    }
    PLAN_CHECKINS {
        uuid        id                 PK
        uuid        series_id          FK
        uuid        user_id            FK
        uuid        plan_id            FK
        uuid        adjusted_plan_id   FK
        int         period_number
        date        start_date
        date        period_end
        numeric     baseline_weight_kg
        numeric     actual_weight_kg
        smallint    adherence_pct
        string      status
        timestamptz created_at
    }

    USERS               ||--o{ NUTRITION_PLANS      : "follows"
    NUTRITION_PLANS     ||--o{ NUTRITION_PLANS      : "revised_from"
    NUTRITION_PLANS     ||--o{ PLAN_EVALUATIONS     : "evaluated_by"
    USERS               ||--o{ PLAN_CHECKIN_SERIES  : "starts_series"
    PLAN_CHECKIN_SERIES ||--o{ PLAN_CHECKINS        : "contains"
    NUTRITION_PLANS     ||--o{ PLAN_CHECKINS        : "tracks_plan"

    %% ---------- 5. AI CHAT ----------
    CHAT_SESSIONS {
        uuid        id          PK
        uuid        user_id     FK
        string      title
        timestamptz created_at
    }
    CHAT_MESSAGES {
        bigint      id          PK
        uuid        session_id  FK
        string      role
        text        content
        boolean     flagged
        timestamptz created_at
    }
    MESSAGE_CITATIONS {
        bigint    message_id  PK
        bigint    chunk_id    PK
        numeric   score
        smallint  rank
    }

    USERS           ||--o{ CHAT_SESSIONS     : "starts"
    CHAT_SESSIONS   ||--o{ CHAT_MESSAGES     : "contains"
    CHAT_MESSAGES   ||--o{ MESSAGE_CITATIONS : "cites"
    DOC_CHUNKS      ||--o{ MESSAGE_CITATIONS : "cited_in"

    %% ---------- 6. THÔNG BÁO & KIỂM TOÁN ----------
    NOTIFICATIONS {
        bigint      id          PK
        uuid        user_id     FK
        string      type
        string      title
        text        body
        boolean     is_read
        timestamptz created_at
    }
    AUDIT_LOGS {
        bigint      id           PK
        uuid        actor_id     FK
        string      action
        string      entity
        text        entity_id
        jsonb       before_data
        jsonb       after_data
        inet        ip_address
        timestamptz created_at
    }

    USERS ||--o{ NOTIFICATIONS : "receives"
    USERS ||--o{ AUDIT_LOGS    : "acts"
